JWT authorization & related improvements
