# internal/controllers/article/createArticle.post.go
@@ -4,13 +4,14 @@ import (
 	"errors"
 	"fmt"
 	"net/http"
+	"user-management/internal/auth"
 	"user-management/internal/controllers"
 	"user-management/internal/domain"
 	"user-management/internal/models"
 	"user-management/internal/views"
-)
 
-const UserOIdKey = "User-OId"
+	"github.com/golang-jwt/jwt/v5"
+)
 
 type ArticleData struct {
 	// theme of article
@@ -39,10 +40,10 @@ type authResp200 struct {
 	body domain.Article
 }
 
-// invalid article data provided
+// invalid data provided
 // swagger:response createArticleResp400
 // nolint:unused
-type authResp401 struct {
+type authResp400 struct {
 	// in: body
 	body controllers.ErrorBody
 }
@@ -51,33 +52,20 @@ type authResp401 struct {
 // creates new article
 // ---
 // Checks user with provided `user_oid` and `password` exists and validates article data.
-// Then saves and returns created item.
+// Then creates and returns created item.
 //
 // security:
-//
-//   - userOId:
-//     password:
+//   - jwt:
 //
 // responses:
 //
 //	201: createArticleResp201
-//	401: unauthorizedResp
+//	401: unauthorizedResp401
 //	400: createArticleResp400
 //	500: commonError
 func (a Article) Create(ctx controllers.Context) error {
-	userOId := ctx.Request().Header.Get(UserOIdKey)
-	err := a.userModel.Exists(userOId, ctx.QueryParams().Get("password"))
-	if errors.Is(err, models.UserNotFoundErr) || errors.Is(err, models.InvalidAuthParameterErr) {
-		e := ctx.JSON(http.StatusUnauthorized, controllers.ErrorBody{Error: "invalid user_oid or password"})
-		return fmt.Errorf("%v: %w", e, err)
-	}
-	if err != nil {
-		e := ctx.NoContent(http.StatusInternalServerError)
-		return fmt.Errorf("%v: %w", e, err)
-	}
-
 	var data ArticleData
-	err = ctx.Bind(&data)
+	err := ctx.Bind(&data)
 	if err != nil {
 		e := ctx.JSON(http.StatusBadRequest, controllers.ErrorBody{Error: "failed to parse article"})
 		return fmt.Errorf("%v: %w", e, err)
@@ -86,8 +74,8 @@ func (a Article) Create(ctx controllers.Context) error {
 	if len(article.Tags) == 0 {
 		article.Tags = []string{}
 	}
-	err = a.articleModel.Create(userOId, &article)
-	if errors.Is(err, models.InvalidArticleErr) {
+	err = a.articleModel.Create(ctx.Get("user").(*jwt.Token).Claims.(*auth.JWTClaims).UserOId, &article)
+	if errors.Is(err, models.InvalidArticleErr) || errors.Is(err, models.UnknownUserErr) {
 		e := ctx.JSON(http.StatusBadRequest, controllers.ErrorBody{Error: err.Error()})
 		return fmt.Errorf("%v: %w", e, err)
 	}
